REL-109447: added margin at the bottom of the page to fix the flicker bug

--- a/source/kCura.IntegrationPoints.Web/Content/import.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import.css
@@ -35,3 +35,7 @@
     padding-bottom: 5px;
     padding-left: 10px;
 }
+
+#card-margin-bottom {
+    margin: 15px 12px 20px 12px;
+}
